小豆本模試

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -48,9 +48,9 @@ journalctl -b -1
 -l, --full
 ※journalctlコマンドでのログ出力をjson形式に変更したい。
 journalctl -o json
-※・アーカイブジャーナルの総容量が指定したサイズを下回るまで古いエントリを削除したい。
+※アーカイブジャーナルの総容量が指定したサイズを下回るまで古いエントリを削除したい。
 --vacuum-size
-※・指定した期間より古いアーカイブジャーナルを削除したい。
+※指定した期間より古いアーカイブジャーナルを削除したい。
 --vacuum-time
 ※journalctlコマンドでのログ出力において、新規に追加されたログをリアルタイムに表示させたい。
 -f , --follow (tail -fと同様)
@@ -1239,11 +1239,13 @@ systemdの場合
 IPPサービス(ポート631/tcp)が開いていれば、CUPSは動作している。  
 `netstat -at | grep ipp`  
 
-### PostScript , PPD(Postscript Printer Description)
+### PostScript
 
 アドビシステムズが開発したページ記述言語で、どういったデータをどのように描画するかという命令が記述されます。  
 
-PPDファイルとは、アドビシステムズが策定したファイル形式で、プリンタがPostScriptで記述されたデータをどのように扱うかを定義するファイルです。  
+### PPD(Postscript Printer Description)
+
+アドビシステムズが策定したファイル形式で、プリンタがPostScriptで記述されたデータをどのように扱うかを定義するファイルです。  
 (フォント、用紙サイズ、解像度など、PostScriptプリンタの機能を記述し制御するためのファイル)  
 
 ラスタデータとは、点の集合で作成された画像形式です（例：JPEG、BMPファイル）。  
