--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -35,8 +35,6 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・nmcli :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)、及びコマンド。  
 ・nmtui :: NetworkManagerによるネットワーク管理を行える、cursesベースのインタフェースを起動するコマンド。
 ・curses :: (カーシス: UNIX向け端末制御ライブラリ)ベースのテキストユーザインタフェース(TUI)。
-
-・hostnamectl    :: systemdが動作するシステムにおける、ホスト名や関連する情報の表示、ホスト名の設定を行うコマンド。  
 ・systemd-networkd :: systemdの動作するシステムで、ネットワーク設定を管理するデーモンプログラム
 ※systemd-networkdの設定は「/etc/systemd/network」配下の拡張子.networkのファイルで行います。
 ```
@@ -49,7 +47,8 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・tracepath   :: 宛先アドレスまでの経路と経路上の最大転送単位(PathMTU)を確認するコマンド。
 ・tracepath6  :: ipv6版
 ・hostname    :: 自ホストのホスト名やドメインを参照したり、ホスト名を一時的に変更するコマンド。
-・hostnamectl :: systemd用ホスト名を設定するコマンド。「nmcli general hostname ホスト名」でも表示可能。
+・hostnamectl :: systemdが動作するシステムにおける、ホスト名や関連する情報の表示、ホスト名の設定を行うコマンド。
+※「nmcli general hostname ホスト名」でも表示可能。
 ・netstat     :: さまざまな項目を指定して、ローカルホストのネットワーク関連の情報を表示するコマンド。
 ・ss          :: netstatの後継。ネットワークのソケットの情報を表示するコマンド。
 ・nc          :: テキストストリームにおけるcatコマンドと同様の働きをネットワーク上で行うコマンド。簡易サーバーにもなる。
