--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -13,7 +13,7 @@
               リダイレクト「>」によるファイルの上書きを禁止にしたい。[set -o noclobber]
               シェルのオプションの設定状態を確認。[set -o]
 ・env      :: 設定されている環境変数の値を一時的に変更したり、削除したりしてコマンドを実行するコマンド。全ての環境変数も表示できる。
-              一時的に削除するコマンドは「-u」
+※一時的に削除するコマンドは「-u」
 ・printenv :: 指定した環境変数のみを表示するコマンド。未指定で全ての環境変数を表示する。
 ・/etc/bash.bashrc :: Debian系。bash起動時に実行させたい処理(エイリアス)を記述するファイル。
 ・/etc/bashrc      :: RedHat系。bash起動時に実行させたい処理(エイリアス)を記述するファイル。
