--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -5,19 +5,19 @@
 ・Xサーバ       :: キーボードやディスプレイなどのハードウェアを管理するソフトウェア。
 ・Xクライアント :: TCP/IP上でXプロトコルによりXサーバーのサービスを受けるソフトウェア。X上で動作するアプリケーションそのもの。
 ・/etc/X11/xorg.conf :: X.Orgの設定ファイル。
-                       [入出力デバイスとスクリーンの指定 :: ServerLayout]
-                       [RGBカラーデータベースの場所やフォントの格納場所に関する設定を行う :: Files]
-                       [ビデオカードの設定 :: Device]
 ・/etc/X11/xorg.conf.d/ :: X.Orgの設定を保存するディレクトリ。X.Orgの設定として拡張子.confのファイルを保存できる。
+・/usr/share/X11/xorg.conf.d/ :: デフォルトのX.Orgの設定ファイルが配置されているディレクトリ。
+※手動で設定が必要な場合は、設定を変更するファイルを/etc/X11/xorg.conf.dディレクトリ以下にコピーして編集する。
 ・~/.xsession-errors    :: X Window Systemのエラーが出力されるファイル。
-・~/.xinitrc or /etc/X11/xinit/xinitrc :: startx実行時に呼び出されるスクリプトファイル。
+・~/.xinitrc             :: startx実行時に呼び出されるスクリプトファイル。
+・/etc/X11/xinit/xinitrc :: startx実行時に呼び出されるスクリプトファイル。~/.xinitrcが無ければ実行される。
 ・xhost   :: ホスト単位でXサーバへのアクセス許可・不許可をコントロールするコマンド。  
 ・xauth   :: Xサーバへの接続に使用される資格情報を表示したり、クライアント認証ファイルを編集するコマンド。  
+・環境変数DISPLAY :: Xクライアントが出力を行うXサーバーを設定する環境変数。書式 :: [ホスト名 or IPアドレス]:ディスプレイ番号
+※ディスプレイ番号は「0」から始まる。
 ・startx  :: CUI環境からGUI環境に移行するコマンド。CUI環境（ランレベル3）で実行すると、X Window Systemが起動する。
 ・Wayland :: X11に変わる新しいディスプレイサーバー。クライアントとサーバ―はWaylandプロトコルで通信する。  
 
-※環境変数DISPLAYの書式 :: [ホスト名 or IPアドレス]:ディスプレイ番号
-※ディスプレイ番号は「0」から始まる。
 ※Xクライアント（172.16.0.4）上で実行したプログラム「xeyes」をXサーバ（172.16.0.1）のディスプレイに表示させたい。
 [Xserver# xhost +172.16.0.4] → [Xclient# DISPLAY=172.16.0.1:0] → [Xclient# export DISPLAY] → [Xclient# xeyes &]
 ※Xサーバの設定で、「user.example.com」からのアクセスのみ許可したい。
@@ -25,7 +25,7 @@
 ```
 
 ``` txt : ディスプレイマネージャーの設定
-・ディスプレイマネージャ :: グラフィカルログイン画面を提供する。ログイン認証、ログイン後のデスクトップ環境の準備を行う。
+・ディスプレイマネージャ :: グラフィカルログイン画面を提供する。ログイン認証、ログイン後のデスクトップ環境の準備を行うプログラム。
 ※initやsystemdによりディスプレイマネージャーサービスが起動される(ランレベル5)
 ・XDM :: X.Org標準のディスプレイマネージャ
 ・GDM :: GNOMEの標準ディスプレイマネージャー  
@@ -38,6 +38,13 @@
 ・/etc/X11/xdm/Xsetup_0   :: XDMログイン画面表示前に実行されるスクリプト。XDMのカラー設定や背景（壁紙）の指定を行う。
 ※ファイル名の末尾にある「_0」はディスプレイを識別するための番号（ディスプレイ番号）。
 ・/etc/X11/xdm/Xsession   :: XDMのログイン後に実行されるスクリプト。
+
+※ディスプレイマネージャーの起動の流れ
+startxコマンド → xinitコマンド → .xinitrc → /etc/X11/xinit/xinitrc → DM起動
+※グラフィカルログインを有効にする方法
+・ランレベルを5に設定する。
+・CUI環境でstartxコマンドを実行する。
+・systemdを採用したシステムでGNOMEを有効にする場合、[systemctl enable gdm.service]を実行する。
 
 ・ウィンドウマネージャー :: ウィンドウの概観、アイコンやカーソル、メニューなどを提供するXクライアントのアプリケーション。
 ・twm    :: 最小限の機能を備えたウィンドウマネージャー
@@ -53,15 +60,10 @@
 ※デスクトップを操作される側のコンピュータにVNCサーバを、操作する側のコンピュータにはVNCクライアントをインストールする。
 ・RDP(Remote Desktop Protocol)   :: Windows標準のリモートデスクトップ機能で使用される通信プロトコル。
 ・SPICE(Simple Protocol for Independent Computing Environment) :: 画面転送プロトコル。通信の暗号化やマルチモニタ(4画面まで)など、多数の機能に対応している。  
+※仮想マシンのホスト（仮想環境の土台）にインストールしたSPICEサーバが仮想マシンの画面出力をクライアントに送信して直接操作する。
 ・XDMCP (X Display Manager Control Protocol) :: XサーバとXクライアント間を制御するプロトコル。ﾈｯﾄﾜｰｸ上にあるﾘﾓｰﾄﾎｽﾄにｸﾞﾗﾌｨｶﾙﾛｸﾞｲﾝする場合に使用される
 
-※仮想マシンへのリモートデスクトップ接続について正しいもの
-SPICEでは仮想マシンの画面出力を直接扱える
-VNCサーバは仮想マシンのゲストOSにインストールする
-→
-VNCは仮想マシンのゲストOS（仮想マシン上で動作するOS）にインストールしたVNCサーバがゲストOSの画面出力をキャプチャしてクライアントに送信するのに対して、
-SPICEでは仮想マシンのホスト（仮想環境の土台）にインストールしたSPICEサーバが仮想マシンの画面出力をクライアントに送信して直接操作することができます。
-
+※「/etc/inittab」ファイルにおいて、デフォルトで「GUI環境」を起動させる記述 :: id:5:initdefault:
 ※ヒエラルキー  
 統合デスクトップ環境 > ディスプレイマネージャー、ウィンドウマネージャー > ディスプレイマネージャーXDMの仕組み(X11)
 ```
@@ -146,6 +148,9 @@ X.Prgの設定ファイル
 
 xorg.confファイルは複数のセクションから構成されている。  
 各セクションは「Section "セクション名"」から始まり、「EndSection」で終わる。  
+
+デフォルトの設定ファイルは/usr/share/X11/xorg.conf.dに配置されている。  
+手動で設定が必要な場合は、設定を変更するファイルを/etc/X11/xorg.conf.dディレクトリ以下にコピーして編集する。
 
 ``` txt : xorg.confの主なセクション
 Files        :: フォントやカラーデータベースファイルのパス名
@@ -310,6 +315,13 @@ KDM :: KDEの標準ディスプレイマネージャー
 SDDM(Simple Desktop Display Manager) :: kdmの後継。KDE Plasmaの標準ディスプレイマネージャー  
 LightDM :: Ubuntuの標準ディスプレイマネージャー  
 ```
+
+### グラフィカルログインを有効にする方法
+
+・ランレベルを5に設定する。
+・CUI環境でstartxコマンドを実行する。
+・systemdを採用したシステムの場合、[systemctl enable ○○.service]を実行する。
+※例えばGNOMEの場合、○○はgdm.serviceとなる。
 
 ### ウィンドウマネージャー
 
@@ -515,57 +527,32 @@ Emacsに読みこんだテキストや電子メール等を音声で読み上げ
 
 ## 小豆本問題
 
-### 8.1  
-
+``` txt : 1回目
+### 8.1 xorg.conf ○
 XサーバとしてX.Orgを利用しています。中心となる設定ファイル名を記述してください。  
 
-→  
-xorg.conf  
 
----
-
-### 8.2  
-
+### 8.2 InputDevice ○
 X.Orgの設定ファイルで、キーボードやマウスなどの入力装置に関する設定を行うセクションを選択してください。  
 
-→  
-InputDevice  
 
----
-
-### 8.3  
-
+### 8.3 xhost +remotepc ○
 ホストremotepcのXクライアントが、ホストlocalpcのXサーバーを利用できるように設定しようとしています。  
 ホストlocalpc上で利用の許可を設定するには、どのコマンドを使えばよいかを選択してください。  
 
-→  
-xhost +remotepc  
 
----
-
-### 8.4
-
+### 8.4 LightDM,SDDM
 ディスプレイマネージャをすべて選択してください。  
-
 →  
 ディスプレイマネージャーかウィンドウマネージャーか。
 ここら辺の違いと代表的なソフトをまとめておく。  
 
-LightDM,SDDM
 
----
-
-### 8.5
-
+### 8.5 DISPLAY
 ネットワーク経由でリモートホストのXクライアントがローカルホストのXサーバーを利用したい場合、リモートホストで設定すべき環境変数を記述してください。
 
-→  
-DISPLAY  
 
----
-
-### 8.6
-
+### 8.6 RDP
 WindowsのデスクトップをLinux端末からネットワーク越しに操作しようとしています。
 Windows標準のリモートデスクトップ機能で採用されているプロトコルを選択してください。  
 
@@ -574,12 +561,8 @@ RemoteDesktopProtocol
 合ってた。
 この問題はやる前から大丈夫そうだな。
 
----
 
-### 8.7
-
+### 8.7 スティッキーキー
 Shiftキーと他のキーを同時に押すことが出来ないユーザーのために提供されている、Shiftキーを一度押すと、  
 他のキーを押すまでShiftキーがアクティブな状態のままになる機能のことを何と呼びますか？  
-
-→  
-スティッキーキー  
+```
