--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -61,11 +61,11 @@ usermod -Gを使う
 ※「hogescript」スクリプトを土曜日と日曜日に2時間ごとに実行したい。
 0 */2 * * 6,7 hogescript
 
-・at :: 1回限りの実行スケジュールを扱うコマンド。※日時は基本的にHH:MMの形式で指定
+・at    :: 1回限りの実行スケジュールを扱うコマンド。※日時は基本的にHH:MMの形式で指定
 ・batch :: システムの負荷の少ないタイミングで指定した時間に1回だけコマンドを自動実行します。  
-・atd :: atデーモン。atコマンドによるスケジューリングを実施するデーモン。
-・atrm :: atのジョブを削除するコマンド。[at -d]と同じ。  
-・atq :: atのジョブのスケジュールを一覧で表示するコマンド。[at -l]と同じ。  
+・atd   :: atデーモン。atコマンドによるスケジューリングを実施するデーモン。
+・atrm  :: atのジョブを削除するコマンド。[at -d]と同じ。  
+・atq   :: atのジョブのスケジュールを一覧で表示するコマンド。[at -l]と同じ。  
 
 ・/etc/cron.allow :: cronの利用を許可するユーザーを記述する。  
 ・/etc/cron.deny  :: cronの利用を拒否するユーザーを記述する。  
@@ -79,7 +79,7 @@ usermod -Gを使う
 ③ どちらのファイルも無ければ、rootユーザーだけがatを利用できる。  
 
 ・timerユニット :: systemdにおいて、cronのようにジョブスケジューラとして使用できるユニット。
-                  「/etc/systemd/system」に拡張子.timerの定義ファイルを作成し、[Timer]セクションに実行タイミングと実行するジョブを指定する。  
+※「/etc/systemd/system」に拡張子.timerの定義ファイルを作成し、[Timer]セクションに実行タイミングと実行するジョブを指定する。  
 ・モノトニックタイマー  :: cronのように、起動後はジョブを定期的に実行する。  
 ・リアルタイムタイマー  :: atのように、指定した実行日時にジョブを1度だけ実行する。  
 ・systemctl list-timers :: systemdにおいて、全ての有効なtimerユニットを表示するコマンド。  
@@ -105,7 +105,8 @@ usermod -Gを使う
 ※LC_ALLは全てのカテゴリを上書きするので「/etc/locale.conf」に設定することは推奨されません。
 ※「LANG=C」を設定すると、ロケールが異なる環境でも英語で共通の出力が得られる
 ※LC_ALLはlocale.confに記述しない
-
+※環境変数LANGの指定をコマンドの前に置くと、そのコマンドのみ指定された環境で実行される。
+例) LANG=ja_JP.eucJP myapp
 
 ・iconv :: 文字コードを変換するコマンド  
 ・ASCII       :: 7ビットで表される基本的な128種類の文字(英数字+α)  
@@ -599,11 +600,11 @@ Ctrl + Dでコマンドの入力を終了する。
 ``` txt
 1. at オプション
 2. at [-f ファイル名] [日時]
-
 ※日時は基本的にHH:MMの形式で指定
 
 オプション
--dジョブ / -rジョブ :: 予約中のジョブをジョブ番号で指定して削除する(atrmコマンドと同じ)
+-rジョブ番号 :: 指定した予約中のジョブを削除する(atrmコマンドと同じ)
+-dジョブ番号 :: -rと同じ
 -l :: 予約中のジョブを表示する(atqコマンドと同じ)
 -f :: コマンドを記述したファイルを指定する。
 ```
