--- a/LPIC/102/99_参考書の模試.md
+++ b/LPIC/102/99_参考書の模試.md
@@ -2,8 +2,7 @@
 
 ## スピードマスター102模試
 
-``` txt : 1回目
-34 / 60
+``` txt : 1回目 34 / 60
 残念。不合格。
 
 
@@ -82,10 +81,7 @@ ulimitコマンド
 セキュリティでやったっぽいが全然出てこなかった。  
 ```
 
----
-
-``` txt : 2回目
-49/60
+``` txt : 2回目 49/60
 8割できた。まぁ合格ってことではないか。
 当たってもよかった問題が2つあった。実質51。
 
@@ -326,3 +322,351 @@ Cは-userの指定が0なので×。
 ---
 
 ## 小豆本模試
+
+``` txt : 1回目 47/60
+ちょっとひどいな。
+7.5割くらいは出来たことになるが、かなりモヤモヤする内容。
+しっかり復習しましょう。
+resolve.confとDISPLAYが出てこなかったのがかなり痛い。どれも超基本。
+後は、user系コマンドで名前の指定し忘れ。
+オプションとかは全部合ってたのに、それで点数落とすのは悔しい。
+後は、よくわからない選択問題で結構間違ってたのでそれも復習。
+でもまぁ、こんな出来でも8割近くは取れているので、12日に試験でも受かっていただろとは思う。
+小豆本の模試のほうが難しく感じた。
+後は、sが付くのか付かないのかも改めて確認しておくべし。
+
+
+## 01 A ○
+
+## 02 B,C ○
+
+## 03 export VAR ○
+
+## 04 alias ○
+引数を何も指定しなければ、設定されているエイリアス一覧が表示される。
+
+## 05 2 ○
+
+## 06 done ○
+
+## 07 C,E ※ ○
+TESTコマンドは[～]の形式でよく使われる。
+
+## 08 #! /bin/bash ○
+
+## 09 XSESSION ※ × DISPLAY
+全然出てこなかった。ここまで間違えたので、次は大丈夫だと信じたい。
+
+## 10 A,D,E ※ ○
+/usr/share/X11/xorg.conf.d/* は聞いたことが無かった。
+
+設定変更が必要な場合は、/usr/share/X11/xorg.conf.dディレクトリ以下の設定ファイルを/etc/X11/xorg.conf.dディレクトリ以下にコピーして設定を変更する。
+
+## 11 D ※ ○
+グラフィカルログインを有効にするには、ランレベルを5にする以外に、[systemctl enable gdm.service]でも行けるらしい。
+
+## 12 A ○
+
+## 13 usermod -G develop -d /home/dev × usermod -G develop -d /home/dev fred
+ユーザー名を指定するのをすっかり忘れてしまった。
+他はすべて合っている。
+
+## 14 /etc/skel ○
+
+## 15 B ○
+
+## 16 userdel -r × userdel -r fred
+
+## 17 /etc/group ※ ○
+groupsなのか迷った。
+sが付くかどうか迷うものはすべて確認したほうがいいだろう。
+
+## 18 A × B
+あー・・・。
+5だけだと5分になった1回しかやらない。
+0-59/5で5で割り切れる時刻に設定されてるやつが正解だ。
+これは全く気が付かなった。
+
+## 19 D × E
+あー・・・。これもポカミスだな。
+ユーザーのcron設定だから/var/spoolまではよかった。
+なぜかcrontabのほうを選んでしまったが、設定ファイルは普通にcronだ。
+18と19は十分正解出来た問題だし、出来ていれば安定して8割は取れてたな。
+
+## 20 A,E ○
+
+## 21 B,E × A,B,E
+at -r
+at -d
+atrm
+
+atコマンドのオプションを再確認する必要がある。-rなんてあったのか？
+あった。内容は-dと同じ。つまり-rでも-dでもどちらでも削除できる。
+割と知らなかった。ping-tでは-dしか出てこなかったから。
+
+## 22 B × D
+locate× locale○
+locateコマンドなるものは存在しない。
+なんだかんだあいまいにしてきたとこなのでしっかり復習する。
+
+## 23 D × A
+環境変数LANGの指定をコマンドの前に置くと、そのコマンドのみ指定された環境で実行される。
+割と新事実なのだが？
+
+
+## 24 C ○
+
+## 25 ntpdate ○
+
+## 26 hwclock ○
+
+## 27 E ○
+
+## 28 /etc/rsyslog.conf ○
+
+## 29 B,C,E ○
+
+## 30 journalctl ○
+
+## 31 A,E ○
+
+## 32 newaliases ○
+
+## 33 A ○
+
+## 34 C ○
+
+## 35 E ○
+
+## 36 B,E ※ × E
+なぜ2つ選んだのか？
+多分、少し前に似たような問題があったからだと思うけど、それにしても間違えたやつを選んだということは、知識があいまいという事だろう。
+-d :: 指定したプリンタに出力する。指定しない場合はデフォルトプリンタが使われる。 lprにおける-P。
+全然違った。
+-rと-dで削除が有効なのはatコマンド。
+印刷系のコマンドでは印刷取り消しは専用のコマンドをたたくしかない。
+lpr -dなるコマンドは存在しない。
+
+## 37 172.20.10.47 ○
+
+## 38 A,B,C ○
+
+## 39 A,E ○
+
+## 40 ICMP ○
+
+## 41 B,C ○
+
+## 42 A,C ○
+
+## 43 /etc/hosts ※ ○
+
+## 44 nmcli ○
+
+## 45 /etc/hostname ※ ○
+
+## 46 ICMP ○
+
+## 47 B ○
+
+## 48 B ※ × E
+routeコマンドを使ったルーティングテーブルの追加。
+[route add -net ネットワークアドレス gw ゲートウェイのアドレス]
+
+俺が選んだ書式
+[route -add 172.16.0.0/16 gw 192.168.6.254]
+
+-add と add -net以外は合っていたので惜しかった。
+
+## 49 A,B,E ※ × A,C
+digとhostがdnsを使う。
+pingは使わない。
+ping-tの演習でもやってる。dig , getent , host , nslookup
+
+## 50 /etc/hosts ※ × /etc/resolv.conf
+完全に度忘れしたやつ。
+pint-t形式でやれば正解だったのだろうけど、記述形式ではダメだった。
+
+## 51 passwd ※ × chage
+passwd,usermod,chageの見分けが付かない。
+chageコマンドを利用すると、ユーザーのパスワードの有効期限の設定や確認ができる。
+有効期限を設定することで、ユーザーに定期的にパスワードを変更させることが出来る。
+
+ユーザーを指定する事ができるのか？
+→どちらも指定することができる。
+パスワード全体の設定に特化しているのか？
+→全体という事はない。そのユーザーのパスワードをどれくらい設定出来るかの度合いしかない。
+
+
+chage [オプション] [ユーザー名]
+-l :: アカウントとパスワードの失効日の情報を表示。(ls)
+-d :: パスワードの最終更新日を設定。YYYY-MM-DDの形式もしくは1970年1月1日からの日数で指定する。
+-m :: パスワード変更間隔の最短日数を設定。(minimum)
+-M :: パスワードを変更なしで使用できる最長日数を設定。(Max)
+-W :: パスワードの変更期限の何日前から警告を出すかを指定。(Warning)
+-I :: パスワードの変更期限を過ぎてからアカウントが使用できなくなるまでの失効日数。(Inactive)
+-E :: アカウントの失効日を設定。(YYYY-MM-DD形式)(Expire:期限切れ)
+
+passwd [オプション] [ユーザー名]
+-l :: パスワードをロックして一時的に無効化する。
+-u :: パスワードのロックを解除する。
+-x :: パスワードが変更なしで有効な最長日数を設定する。
+-i :: パスワード失効までの猶予日数を設定する。
+
+passwdはユーザーのパスワードを変更するのがメインのコマンド。
+パスワードのロックや最長日数、失効までの猶予期間の設定はできるが、問題文にある有効期限の確認や設定は出来ない。
+
+chageはパスワードの変更は出来ないが、有効期限の確認や設定等の細かな設定ができるコマンド。
+問題文中に有効期限というフレーズがあれば間違いなくこちら。
+
+
+## 52 A,B,D ○
+
+## 53 /etc/sudoers ※ ○
+.confだったか迷ったやつ。
+設定ファイルではないので拡張子は何も付かないのが正解。
+
+## 54 /etc/shadow ○
+
+## 55 C ※ ○
+xinetdのサービス無効の設定はdisable = yesで問題なかった。
+
+## 56 E ○
+
+## 57 ssh-keygen ○
+
+## 58 D ○
+
+## 59 ssh-add ○
+
+## 60 A ○
+
+```
+
+---
+
+``` txt : 予備
+??/60
+
+
+## 01
+
+## 02
+
+## 03
+
+## 04
+
+## 05
+
+## 06
+
+## 07
+
+## 08
+
+## 09
+
+## 10
+
+## 11
+
+## 12
+
+## 13
+
+## 14
+
+## 15
+
+## 16
+
+## 17
+
+## 18
+
+## 19
+
+## 20
+
+## 21
+
+## 22
+
+## 23
+
+## 24
+
+## 25
+
+## 26
+
+## 27
+
+## 28
+
+## 29
+
+## 30
+
+## 31
+
+## 32
+
+## 33
+
+## 34
+
+## 35
+
+## 36
+
+## 37
+
+## 38
+
+## 39
+
+## 40
+
+## 41
+
+## 42
+
+## 43
+
+## 44
+
+## 45
+
+## 46
+
+## 47
+
+## 48
+
+## 49
+
+## 50
+
+## 51
+
+## 52
+
+## 53
+
+## 54
+
+## 55
+
+## 56
+
+## 57
+
+## 58
+
+## 59
+
+## 60
+
+```
