まちがったやつまとめ

--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -44,7 +44,7 @@ usermod -Gを使う
 ・crond :: 定期的に実行するジョブのスケジュールを管理するデーモン。1分ごとに起動され、crontabファイルなどを調べて設定されたジョブを実行する。
 ・/usr/sbin/crond :: RedHat系crondデーモン  
 ・/usr/sbin/cron  :: Debian系crondデーモン  
-・crontabコマンド :: ユーザ用のcronの設定を行うコマンド。コマンドの定時実行のスケジュール管理コマンド。  
+・crontab         :: ユーザ用のcronの設定を行うコマンド。コマンドの定時実行のスケジュール管理コマンド。  
 ・crontab書式     :: [分] [時] [日] [月] [曜日] [実行ユーザー名(システム用設定ファイルでのみ指定)] [コマンド]
                      [* :: 全てに一致] , [- :: 範囲指定] , [, :: 複数の値を指定] , [/  :: 間隔の指定]
                      1つの設定を識別するのに必要なもの→「改行」
@@ -122,7 +122,7 @@ usermod -Gを使う
 ・/etc/localtime :: システムクロックの時刻からローカルタイムへ変換するための時差情報が格納されている。  
 ・/etc/timezone  :: システムで使用するタイムゾーンを指定するテキストファイル。  
 ・/usr/share/zoneinfo/ :: タイムゾーンの情報がバイナリファイルとして格納されているディレクトリ。
-                          システムで使用したいファイルを「/etc/localtime」へコピーまたはシンボリックリンクを作成することで反映される。
+※システムで使用したいファイルを「/etc/localtime」へコピーまたはシンボリックリンクを作成することで反映される。
 ・環境変数TZ :: タイムゾーンの設定に使用される環境変数。
 ・tzselect :: 一覧から表示される情報をもとにタイムゾーンを設定できるコマンド。  
               環境変数「TZ」や「/etc/timezone」ファイルで指定するタイムゾーンの値を確認できる。
