--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -48,10 +48,8 @@
 違和感はあったんですけどねぇ。  
 ついでなので言葉の意味も覚えておきます。  
 
-``` txt
-畑違いの人。  
-その物事について専門家ではない人。  
-```
+>畑違いの人。  
+>その物事について専門家ではない人。  
 
 個人的には、そのプロジェクトに関わりがない人のことだと思ってたけど、厳密には違うのな。  
 
