4週目の奴とか

--- a/LPIC/102/99_参考書の模試.md
+++ b/LPIC/102/99_参考書の模試.md
@@ -424,7 +424,29 @@ locateコマンドなるものは存在しない。
 
 ## 28 /etc/rsyslog.conf ○
 
-## 29 B,C,E ○
+## 29 B,C,E ※ ○
+
+``` txt
+*.emerg                                  *
+*.info;mail.none;authpriv.none;cron.none /var/log/messages
+authpriv.*                               /var/log/secure
+mail.err                                 /var/log/mailing
+cron.warning                             /var/log/cron
+```
+
+A. プライオリティがemerg以上のメッセージは全てのログファイルに出力される。  
+B. ファシリティがauthpriv,mail,cronのメッセージは/var/log/messagesファイルに出力されない。  
+C. ファシリティがcronのメッセージは全てログファイルに記録されるとは限らない。  
+D. プライオリティがalertのメッセージは全てのログに記録されるとは限らない。  
+E. /var/log/secureファイルはファシリティがauthprivのものだけが記録される。  
+
+なぜか当たっていた。  
+先にプライオリティをnoneにした後に設定したらどうなるのか？  
+
+後勝ちってわけじゃなくて、条件の範囲を設定するだけか。  
+cron.noneは/var/log/messagesに対する物であって、この場合は/var/log/messagesにはcronのログは出力されない。  
+しかし、cron.warning以上は/var/log/cronに出力される。  
+そういうことでは無かろうか？  
 
 ## 30 journalctl ○
 
