--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -303,6 +303,8 @@ vue デバッグ
 
 <https://qiita.com/azuki8/items/e3bf4c565756c4123576>
 
+[「なぜDI(依存性注入)が必要なのか？」についてGoogleが解説しているページを翻訳した](https://qiita.com/mizunowanko/items/53eed059fc044c5aa5dc)  
+
 ---
 
 ## 現在進行形
