火をまたぐ前に上げておく。模試2週目

--- a/LPIC/102/99_参考書の模試.md
+++ b/LPIC/102/99_参考書の模試.md
@@ -319,6 +319,204 @@ Cは-userの指定が0なので×。
 アプリケーションのエラー発生時に生成されるcoreファイルの大きさを制限するコマンドは何か？
 ```
 
+``` txt : 3回目 56/60
+まぁ3回目だけあってそれなりに正解はしているが、前回も間違えた問題や超基本な部分があれなところもあるので、まだまだ油断はできない。
+白本の模試のほうが簡単なので明日は小豆本の模試をやることにしよう。
+
+
+## 01 D ※ ○
+~/.bash_loginはあるけど、~/.loginはない。
+違和感は当たっていた。
+
+## 02 A ○
+
+## 03 A ○
+
+## 04 A ※ ○
+
+## 05 E ○
+
+## 06 C,D ○
+
+## 07 B ○
+
+## 08 A ○
+
+## 09 A,B ○
+これ、前回間違えたっけか？
+多分間違えた気がする。
+ディスプレイマネージャーが認証とデスクトップの起動をするなんてあいまいにしか覚えて無かったからな。
+
+## 10 B ○
+
+## 11 C ○
+
+## 12 A ○
+
+## 13 -m ○
+
+## 14 B ※ ○
+
+## 15 B,D ○
+
+## 16 A ※ ○
+Cと迷う。
+
+現在のシステムでは暗号化されたパスワード（シャドウパスワード）が使用されており、パスワード欄には「x」が入ります。  
+この場合、パスワードは「/etc/shadow」ファイルに格納されます。  
+
+/etc/shadowファイルを使っているか否かに関わらず、/etc/passwdの第2フィールドに`*`あるいは`!`を指定すると、  
+PAMの認証モジュールpam_unix.50は/etc/shadowの参照や暗号化パスワードとしての処理をせず、その時点でログインを拒否する。  
+
+「*」と「!」に見覚えがあったのはこのためか。
+
+## 17 D ○
+
+## 18 B ○
+
+## 19 A ○
+
+## 20 A ※ ○
+全員OKかNGか。
+xinetdは全員OK。
+atはrootだけ。
+→全員OKだった。
+
+## 21 C ○
+
+## 22 B ○
+at系のこれって基本先がちだっけか？
+
+## 23 A ※ ○
+前回間違えた。
+
+## 24 hwclock ○
+
+## 25 D ※ ○
+まぁでも普通に考えて時間差だよな。
+
+## 26 A,D ※ × A,B
+makestepで間違えた気がする。
+で、serverとclientという安直な奴はないって話だっけか。
+残り4つなんだっけね？
+serverはあったは。逆にsourceがない。何と勘違いしたか。
+やっぱり設定ファイルは全部抜き出すに限るな。
+まとめ終わった後は逆引きを作る必要がある。
+
+前回もDで間違えてる。
+設定ファイル全部見直してみたが、sourceなんて項目はどこにも無かった。
+これで安心してserver選べるな。
+
+
+## 27 C ○
+
+## 28 A,C ※ ○
+B.CUPSってどうだっけ？
+ない。localはある。ここもだな。
+
+## 29 A,B※ ○
+やべーな結構忘れてる。
+どっちも~~/log/journalであってた。
+var/
+run/
+
+## 30 A,B ○
+
+## 31 B,C × A,C
+これは前間違えたはず。
+systemd-logかとおもったらjournal-logだった。
+やべーな。
+
+## 32 D ※ × A
+これも間違えたな。CUPSの設定ファイルにcupsd.confなんてないよな？
+printerとdeviceはあった気がするけど。
+その認識は合っていたが、deviceではなくprinterのほうに設定する項目だった。
+
+## 33 A,B ○
+
+## 34 B,C,E※ ○
+LC_ALLは記述しないとか変なこと抜かしてた気がする。
+
+## 35 A ○
+
+## 36 A,B ○
+128 64 32 16 8 4 2 1
+
+## 37 A ○
+
+## 38 C ○
+
+## 39 B ○
+
+## 40 ifup ○
+
+## 41 up ○
+これも前回間違えた。とかくインタフェースの有効化はupって風潮があることは理解した。
+
+## 42 C,D ※ ○
+ifconfは送受信バイト数わかるはず。それの後継であるipに出来ないはずがない。-sの詳細オプション付ければわかるだろう。
+
+## 43 B,C ※ ○
+間違えたはずだが、全く記憶にないな。
+設定していない全てのIFを設定する。特別な設定をしていなければDHCPも設定する。
+
+## 44 B,D ※ ○
+接続状態も頻出なのかねぇ。
+試験前に目を通しておきたい。
+頻出系の設定はそれはそれでまとめておきたい。
+
+## 45 A ※ ○
+これもどうだったっけ。忘れたなぁ。
+
+## 46 D ○
+
+## 47 A,D ○
+ip指定しないらgwはいらない。
+
+## 48 B,C ○
+これは前回間違えたので完璧。
+
+## 49 A ○
+QUESTION SECTIONみればいいって話だった。
+で、wwwはあってもなくてもいい。
+
+## 50 A ○
+
+## 51 /etc/alias ※× /etc/aliases
+複数形だっけ？前も迷った気がする。
+でも、正解したから特に何も考えなかった。
+これはメールに別名を付けて転送するファイルだったよな。
+別名じゃなかったら~/.forwardで済むのだが。
+ふぁーーｗｗｗ。
+
+まぁ、これでnewaliasesコマンドに対するファイルは/etc/aliasesとわかったじゃないか。こういう単純な間違いが一番覚える。
+これでaliasに関してはaliasコマンドとaliasesの2つに絞られた。
+
+## 52 A ○
+
+## 53 C ○
+
+## 54 /etc/xinetd.d ○
+前回は最後のスラッシュを入れて間違えたはず。
+こういうのは所々覚えているな。
+
+## 55 A,B,D ○
+
+## 56 -i ○
+
+## 57 A,C ○
+知らない環境変数使うっていわれてブチ切れたやつ。
+
+## 58 ssh-add ○
+add-keyなんてして死んだ気がする。
+
+## 59 A,D ○
+検索条件以前にuidとuserから容易にわかる。
+と、いいつつなんで最初は間違えたのだろうか。
+
+## 60 ulimit ○
+```
+
 ---
 
 ## 小豆本模試
@@ -426,13 +624,11 @@ locateコマンドなるものは存在しない。
 
 ## 29 B,C,E ※ ○
 
-``` txt
 *.emerg                                  *
 *.info;mail.none;authpriv.none;cron.none /var/log/messages
 authpriv.*                               /var/log/secure
 mail.err                                 /var/log/mailing
 cron.warning                             /var/log/cron
-```
 
 A. プライオリティがemerg以上のメッセージは全てのログファイルに出力される。  
 B. ファシリティがauthpriv,mail,cronのメッセージは/var/log/messagesファイルに出力されない。  
@@ -567,8 +763,7 @@ xinetdのサービス無効の設定はdisable = yesで問題なかった。
 
 ---
 
-``` txt : 予備
-??/60
+``` txt : 予備 ??/60
 
 
 ## 01
