102合格、直前の復習

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -26,28 +26,21 @@
 ※次世代のsyslog :: rsyslog,syslog-ng
 ・/etc/syslog.conf  :: syslogに関する設定ファイル。
 ・/etc/rsyslog.conf :: rsyslogの設定ファイル。
-・/etc/systemd/journald.conf
-sytemd-journaldの設定ファイル。
-「/run/log/journal」配下にシステム固有のディレクトリを作成し、その中の「system.journal」ジャーナルファイルに記録する。
-※「/run」ディレクトリはメモリ上に作成されたファイルシステム上のディレクトリのため、再起動するとデータが消えてしまいます。
-・/run/log/journal/system.journal :: バイナリ形式のログが保存されるジャーナルファイル。
-
 ・systemd-journald :: systemdの動作するシステムで、ユニットが出力するログを扱うデーモンプログラム。
-・journalctl
-systemdの動作するシステムでsystemd-journaldのログを表示するコマンド。ログはバイナリ形式。
+・journalctl :: systemdの動作するシステムでsystemd-journaldのログを表示するコマンド。ログはバイナリ形式。
 ※syslogdがsystemd-journaldからsyslogを読み出すように設定する必要がある。
 ※rsyslogやsyslog-ngは、設定せずにsystemd-journaldから読み出せます。
 ※デフォルトではページャによる表示を行う
 ※ページャを無効にするには --no-pager オプションを指定する
-[-xd :: エマージェンシー]
-[-k  :: dmesgと同じ情報を得られるオプション]
+・/etc/systemd/journald.conf :: sytemd-journaldの設定ファイル。
+※「/run」ディレクトリはメモリ上に作成されたファイルシステム上のディレクトリのため、再起動するとデータが消えてしまいます。
+・/var/log/journal/ :: journaldのログの格納ディレクトリ(不揮発性)(デフォルト)
+・/run/log/journal/ :: journaldのログの格納ディレクトリ(揮発性)
+・/run/log/journal/system.journal :: バイナリ形式のログが保存されるジャーナルファイル。
+
 ※前回の起動からシャットダウンまでのログを出力
 /var/log/journal ディレクトリが存在する
 journalctl -b -1
-※各Unitが出力する表示可能なログをすべて表示させたい。
--l, --full
-※journalctlコマンドでのログ出力をjson形式に変更したい。
-journalctl -o json
 ※アーカイブジャーナルの総容量が指定したサイズを下回るまで古いエントリを削除したい。
 --vacuum-size
 ※指定した期間より古いアーカイブジャーナルを削除したい。
