--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -32,6 +32,8 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・NetworkManager :: 動的にネットワークを管理する仕組み。
 ※特定のインタフェースをNetworkManagerで管理しないように設定できる  
 ※検出されたネットワークデバイスは自動でNetworkManagerによって管理される  
+※設定をしていない全てのI/Fに対して設定を行う。
+※特別な設定をしてあるI/F以外はDHCPを設定する。
 ・nmcli :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)、及びコマンド。  
 ・nmtui :: NetworkManagerによるネットワーク管理を行える、cursesベースのインタフェースを起動するコマンド。
 ・curses :: (カーシス: UNIX向け端末制御ライブラリ)ベースのテキストユーザインタフェース(TUI)。
@@ -489,7 +491,7 @@ device      :: status                          :: デバイスの状態を表示
             :: monitor ｲﾝﾀｰﾌｪｰｽ名              :: 指定したデバイスの監視
             :: delete ｲﾝﾀｰﾌｪｰｽ名               :: ｿﾌﾄｳｪｱﾃﾞﾊﾞｲｽ(ﾌﾞﾘｯｼﾞなど)の削除。※ﾌﾞﾘｯｼﾞとは異なるﾈｯﾄﾜｰｸ同士を接続して同一のｾｸﾞﾒﾝﾄとしてまとめる手法
             :: wifi list                       :: Wi-Fiアクセスポイントの表示
-            :: wifi connect SSID               :: Wi-Fiに接続するデバイスを作成、有効化
+            :: wifi connect SSID               :: Wi-Fiに接続するデバイスを作成、有効化。※接続できなければエラーを返す。
             :: wifi rescan                     :: wi-fiアクセスポイントの再検索
 agent
 monitor
