--- a/LPIC/102/99_参考書の模試.md
+++ b/LPIC/102/99_参考書の模試.md
@@ -2,7 +2,7 @@
 
 ## スピードマスター102模試
 
-``` txt : 1回目 34 / 60
+``` txt : 1回目 34/60
 残念。不合格。
 
 
@@ -413,6 +413,7 @@ serverはあったは。逆にsourceがない。何と勘違いしたか。
 ## 28 A,C ※ ○
 B.CUPSってどうだっけ？
 ない。localはある。ここもだな。
+印刷のファシリティがないはずがない。印刷はlprだった。覚えておこう。
 
 ## 29 A,B※ ○
 やべーな結構忘れてる。
@@ -421,6 +422,7 @@ var/
 run/
 
 ## 30 A,B ○
+--sinseと--untilは
 
 ## 31 B,C × A,C
 これは前間違えたはず。
@@ -431,6 +433,7 @@ systemd-logかとおもったらjournal-logだった。
 これも間違えたな。CUPSの設定ファイルにcupsd.confなんてないよな？
 printerとdeviceはあった気がするけど。
 その認識は合っていたが、deviceではなくprinterのほうに設定する項目だった。
+というか、/etc/cups/devices.confなんてファイルは存在しない。
 
 ## 33 A,B ○
 
@@ -459,6 +462,7 @@ ifconfは送受信バイト数わかるはず。それの後継であるipに出
 ## 43 B,C ※ ○
 間違えたはずだが、全く記憶にないな。
 設定していない全てのIFを設定する。特別な設定をしていなければDHCPも設定する。
+勝手に便利は設定を自動でしてくれるのは覚えている。
 
 ## 44 B,D ※ ○
 接続状態も頻出なのかねぇ。
@@ -467,6 +471,9 @@ ifconfは送受信バイト数わかるはず。それの後継であるipに出
 
 ## 45 A ※ ○
 これもどうだったっけ。忘れたなぁ。
+nmcli device wifi connect MY-WIFI
+接続できなければエラーを返す。
+アクセスポイントではなくデバイスを作成する。
 
 ## 46 D ○
 
@@ -748,6 +755,207 @@ chageはパスワードの変更は出来ないが、有効期限の確認や設
 
 ## 55 C ※ ○
 xinetdのサービス無効の設定はdisable = yesで問題なかった。
+
+## 56 E ○
+
+## 57 ssh-keygen ○
+
+## 58 D ○
+
+## 59 ssh-add ○
+
+## 60 A ○
+
+```
+
+``` txt : 2回目 57/60
+まぁ、さすがにねって感じ。
+
+
+## 01 A ○
+
+## 02 B,C ○
+
+env
+set
+printenv
+
+## 03 export VAR ○
+$は付けない。
+$を付けるのはechoとかで表示させるとき。
+
+## 04 alias -l ※× alias
+何も付けなくてよかった。あーそうだ。何も引数が無ければ全部表示するって奴だこれ。
+くっそ。
+
+## 05 2 ○
+
+## 06 done ○
+
+## 07 C,E ※ ○
+testの省略形「[」「]」だった希ガス。
+
+## 08 #! /bin/bash ※ ○
+シェルのパスも入れるべきか迷った。
+
+## 09 DISPLAY ○
+前回敗北
+
+## 10 A,D,E※ ○
+なんでもX11がつく。
+でもって、/usrにもできる。
+・/etc/X11/xorg.conf :: X.Orgの設定ファイル。
+・/etc/X11/xorg.conf.d/ :: X.Orgの設定を保存するディレクトリ。X.Orgの設定として拡張子.confのファイルを保存できる。
+・/usr/share/X11/xorg.conf.d/ :: デフォルトのX.Orgの設定ファイルが配置されているディレクトリ。
+
+## 11 D ○
+
+## 12 A ○
+
+## 13 usermod -G develop -d /home/dev fred ○
+前回敗北。ユーザー名を指定しましょう。
+
+## 14 /etc/skel ○
+
+## 15 B ○
+
+## 16 userdel -r fred ○
+ユーザー名を指定。
+てか、ホームディレクトリ削除って-rだっけか？
+そうだよ。-fがその人が使ってる最中でも強制削除だよ。
+
+## 17 /etc/group ○
+sが付くか付かないか問題。
+付かない。
+
+## 18 B ○
+割り算した商が5になっている事が重要です。
+
+## 19 E ※ ○
+crontabと言われて安直にcrontabと名のつくものを選んではいけない。
+/var/spool/cron/
+
+## 20 A,E ※ ○
+denyすらない場合はどうなるんだっけ？
+やべーな。
+空のdenyがあれば全員OKだった気がする。
+全部なければrootのみ。
+debyが空だったら全員OK。
+
+## 21 A,B,E ※ ○
+atの削除は-rでも-dでもいけた気がする。
+
+## 22 D ※ ○
+前回敗北。locateって選んで死んだはず。
+
+## 23 A ※ ○
+これも何だっけか。
+環境変数を設定する方法をやったはず。
+セミコロンではなくスペースでよかった気がする。
+setコマンドでやるんだっけか？
+ダメだ。忘れた。
+
+あってたけど、どういう原理なんだ。
+
+## 24 C ※ ○
+これも重要だ。要確認。
+こっちがlocaltime。
+
+## 25 ntpdate ※ ○
+存在感がないとか言ってたやつ。
+
+## 26 hwclock ○
+
+## 27 E ※ ○
+上位はserverなはず。
+念のため確認。
+
+## 28 /etc/rsyslog.conf ※ ○
+これも確認だな。
+
+## 29 B,C,D※ × B,C,E
+これな。
+
+## 30 journalctl ※ ○
+
+## 31 A,E ○
+
+## 32 newaliases ○
+
+## 33 A ※ ○
+キューはmailqでよかったっけか？
+相手から来たメールの確認はmailで送る時もmail。
+キューの確認は別のコマンドだった気がするなぁ。
+
+## 34 C ○
+
+## 35 E ○
+
+## 36 E ○
+cancelかlprm
+
+## 37 172.20.10.63 × 172.20.10.47
+128 64 32 16 8 4 2 1
+  1  1  1  1 0 0 0 0
+→この表を書いたがために間違えた。
+
+## 38 A,B,C ○
+
+## 39 A,E ○
+
+## 40 ICMP ○
+
+## 41 B,C ○
+
+## 42 A,C ○
+-nは名前解決しない。
+
+## 43 /etc/hosts ※ ○
+これはsつくけか？確かつくはず。
+hostコマンドは名前解決のコマンドでこっちはsは付かない。
+
+## 44 nmcli ○
+
+## 45 /etc/hostname ○
+
+## 46 ICMP ○
+
+## 47 B ○
+
+## 48 E ※ ○
+これな。敗北。
+addにハイフンは付かない。
+netにハイフンは付く。
+netmaskのキーワードがあるならnetは付かないといけない。
+
+## 49 A,C ※ ○
+dig,host,nslookup,getent
+前回はpingも選んだはず。
+
+## 50 /etc/resolv.conf ※ ○
+これ前回全く出てこなかったやつ。
+
+## 51 chage ※ ○
+有効期限の設定とあればchage
+
+## 52 A,B,D ※ ○
+念のため。
+
+## 53 /etc/sudoers ○
+全部あってるかちゃんと確認する。
+
+## 54 /etc/shadow ※ ○
+sつかないよね？shadowsなんて見たことない。
+因みに*と!ならログイン不可か使ってないってやつだっけか？
+だめだ、確認だ。
+
+現在のシステムでは暗号化されたパスワード（シャドウパスワード）が使用されており、パスワード欄には「x」が入ります。  
+この場合、パスワードは「/etc/shadow」ファイルに格納されます。  
+/etc/shadowファイルを使っているか否かに関わらず、/etc/passwdの第2フィールドに`*`あるいは`!`を指定すると、  
+PAMの認証モジュールpam_unix.50は/etc/shadowの参照や暗号化パスワードとしての処理をせず、その時点でログインを拒否する。  
+
+## 55 C ○
+否定形をyesする方式だった気がする。
 
 ## 56 E ○
 
