--- a/HTML/ノウハウ.md
+++ b/HTML/ノウハウ.md
@@ -60,12 +60,101 @@
 
 [左揃えの文字を横幅が自動的に伸縮する中央寄せにする3つの方法](https://www.acky.info/tips/css/00017.html)  
 
+## ブロック要素、インライン要素
+
+### ブロック要素  
+
+・高さ、余白を設定できる。  
+・中央寄せ等は出来ない。  
+
+・ブロックレベル要素は常に新しい行から始まり、利用可能な全幅を取ります (できる限り左右に伸びます)。  
+・blockの要素を中央に配置したいときにはmargin-right:auto; margin-left:autoという指定により横に中央配置にすることができます。  
+・代表的なタグ :: div,p等  
+
+[ブロックレベル要素](https://developer.mozilla.org/ja/docs/Web/HTML/Block-level_elements)
+
+### インライン要素  
+
+・高さ、余白は設定できない。  
+・中央寄せ等の設定ができる。  
+
+・基本的にブロック要素の中で用いられる。  
+・代表的なタグ :: a,span等  
+
+[インライン要素](https://developer.mozilla.org/ja/docs/Web/HTML/Inline_elements)  
+
 ---
 
-## CSS Class指定の仕方
+## はみ出した要素の改行
 
-[クラス名を使った指定](https://www.tagindex.com/stylesheet/basic/format2.html)  
+[改行を自動で！CSSで文字列を折り返しする方法【初心者向け】現役Webデザイナーが解説](https://techacademy.jp/magazine/9386)  
 
-## CSS Class名命名規則
+・overflow-wrap :: 文章が領域の端に来た時に、単語の途中で改行するかどうかの設定  
+・word-break :: 長い単語が領域の端に来た時に、単語の途中で改行するかどうかの設定  
 
-[ID名とクラス名のサンプル集](https://www.tagindex.com/stylesheet/basic/naming.html)  
+[【CSS】 テキストを折り返す方法！自動で改行・レスポンシブにも対応](https://creive.me/archives/17653/)  
+
+``` txt
+プロパティ名   値         説明
+word-break     normal     日本語の場合は幅に合わせて文字は折り返されます。英語なら単語(各アルファベットではないことに注意)ごとに折り返されます。
+
+               break-all  これは非常に強力な値です。日本語であっても、英語であっても、幅に合わせて一切の単語が途中で折り返されます。
+                          特に英文は単語の途中でも折り返されるので読みづらくなるでしょう。
+
+               keep-all   日本語の場合も、英語の場合も単語の途中での折り返しはしません。
+                          特に日本語場合は、「、」や「。」で区切られる塊ごとに折り返されるため、余分なスペースが空いてしまいます。
+                          
+overflow-wrap  normal     日本語の場合は幅に合わせて文字は折り返され、かつ、文字の途中で折り返されます。
+(word-wrap)               英語なら単語(各アルファベットではないことに注意)ごとに折り返されます。
+
+               break-word 日本語の場合は幅に合わせて文字は折り返され、かつ、文字の途中で折り返されます。
+                          英語なら文章は、単語(各アルファベットではないことに注意)ごとに折り返されますし、長い単語はその途中で折り返されます。
+```
+
+実務上で重宝されるのは「overflow-wrap: break-word;」  
+
+[MDN_テキストの分割と折り返し](https://developer.mozilla.org/ja/docs/Web/CSS/CSS_Text/Wrapping_Text)  
+
+### 長い単語の分割 :: overflow-wrap
+
+ボックスのサイズを固定する必要がある場合や、長い単語がはみ出さないようにしたい場合は、overflow-wrap プロパティが役立ちます。  
+このプロパティは、単語が長すぎて 1 行に収まらない場合、その単語を分割します。  
+
+※overflow-wrap プロパティは、標準外のプロパティの word-wrap と同じように動作します。  
+word-wrap プロパティは、現在ブラウザーでは標準プロパティの別名として扱われています。  
+
+``` css
+.box {
+    inline-size: 150px;
+    overflow-wrap: break-word;
+}
+```
+
+``` html
+<div class="box">
+    Llanfairpwllgwyngyllgogerychwyrndrobwllllantysiliogogogoch
+</div>
+```
+
+別のプロパティとして、word-break を試すことができます。
+このプロパティは、あふれた時点で単語を改行します。単語を改行することで分割せずに表示できる場合でも分割されます。
+次の例では、同じ文字列で 2 つのプロパティの違いを比較してみましょう。
+
+``` css
+.box1 {
+  word-break: break-all;
+}
+.box2 {
+  overflow-wrap: break-word; 
+}
+```
+
+``` html
+<div class="box box1">
+    A Very LongWordThatHasNoBreakingPossibilities
+</div>
+
+<div class="box box2">
+    A Very LongWordThatHasNoBreakingPossibilities
+</div>
+```
