応用セキュリティ、組み込み

--- a/AppliedInformation/応用情報メモ.md
+++ b/AppliedInformation/応用情報メモ.md
@@ -1,5 +1,18 @@
 # 応用情報メモ
 
+## テンプレ
+
+■ a
+■ b
+■ c
+■ d
+■ e
+■ f
+■ g
+■ h
+
+---
+
 ## 参考サイト
 
 [応用情報技術者試験に合格する勉強方法・対策](https://qiita.com/drken/items/42e54d5c43d4d7815ed4)  
