itec組込みシステム完了

--- a/AppliedInformation/itec/7.組み込み/平成25年春季.md
+++ b/AppliedInformation/itec/7.組み込み/平成25年春季.md
@@ -1,16 +1,37 @@
-# 平成25年春季
+# 平成25年春季 ワイヤレス充電ステーション
 
 プリエンプション  
 優先度に関する問題  
 
 ## 1回目 23分 100点
 
+実は特に書くことがない。
+100点取れた地点でこれはもういいだろう。
+
 ``` txt
+## メモ
 10 : 6 = 1 : ?
 10? = 6
 ? = 0.6
 
 51 / 0.6 = 85分
 60+25
+
+## 1 ○
+01:25
+
+## 2
+a 4 ○
+b 2 ○
+c ア ○
+d Stop_Power ○
+
+## 3 ○
+機器IDが0
+
+## 4 ○
+安全監視タスクでGet_Wattを実行
+→
+Get_Watt関数を呼び出す
 
 ```
