令和2年組み込み

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -305,9 +305,8 @@ vue デバッグ
 
 [「なぜDI(依存性注入)が必要なのか？」についてGoogleが解説しているページを翻訳した](https://qiita.com/mizunowanko/items/53eed059fc044c5aa5dc)  
 
----
 
-## 現在進行形
+・ボタン押したらPOST通信するだけの簡単なツールを作ってみたい
 
 ・order by then by
 LINQ OrderBy 複数
@@ -320,6 +319,11 @@ LINQ OrderBy 複数
 →型が違うと無理。
 
 原簿
+
+---
+
+## 現在進行形
+
 
 ---
 
